# ilm-red-api

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  alembic.ini  package.json  pyproject.toml
.github/workflows/: deploy.yml
app/: __init__.py  config.py  main.py  rate_limiter.py
app/ai/: __init__.py  base.py  task_classifier.py
app/cache/: __init__.py  decorators.py  redis_client.py
app/core/: __init__.py  exceptions.py  security.py
app/db/: __init__.py  session.py
app/models/: __init__.py  addon.py  admin_settings.py  annotation.py  announcement.py  audit.py  base.py  billing.py  blog.py  book.py  book_club.py  book_club_ai.py  book_extra.py  chat.py  copyright.py  error_log.py  expert.py  gamification.py  help.py  issue.py  page.py  premium.py  progress.py  public_qa.py  quote.py  ranking.py  rating_flag.py  rbac.py  safety.py  search_analytics.py  suggestion.py  user.py
app/repositories/: __init__.py  addon_repo.py  admin_settings_repo.py  annotation_repo.py  announcement_repo.py  audit_repo.py  billing_repo.py  blog_repo.py  book_club_ai_repo.py  book_club_repo.py  book_extra_repo.py  book_repo.py  chat_repo.py  error_log_repo.py  expert_repo.py  gamification_repo.py  help_repo.py  issue_repo.py  page_repo.py  premium_repo.py  progress_repo.py  public_qa_repo.py  quote_repo.py  ranking_repo.py  rbac_repo.py  search_analytics_repo.py  suggestion_repo.py  user_repo.py
app/schemas/: __init__.py  addon.py  admin.py  admin_settings.py  annotation.py  announcement.py  auth.py  billing.py  blog.py  book.py  book_club.py  book_club_ai.py  book_extra.py  chat.py  common.py  error_log.py  expert.py  gamification.py  help.py  issue.py  page.py  premium.py  progress.py  public_qa.py  quote.py  ranking.py  rating.py  rating_flag.py  rbac.py  recommendation.py  suggestion.py  user.py
app/services/: __init__.py  addon_service.py  admin_settings_service.py  ai_model_router.py  annotation_service.py  announcement_service.py  audit_service.py  billing_service.py  blog_service.py  book_club_ai_service.py  book_club_service.py  book_extra_service.py  book_service.py  chat_service.py  chunking_service.py  embedding_service.py  error_log_service.py  expert_service.py  gamification_service.py  help_service.py  issue_service.py  page_service.py  (+11 more)
data/: .gitignore  README.md  book_content_chunks_rows.json  book_raitings.json  books.json
docker/: Dockerfile  Dockerfile.dev  docker-compose.yml  entrypoint.sh  init-db.sql
docs/: ADMIN_API.md  ARCHITECTURE.md  GITHUB_SECRETS.md  IMPLEMENTATION_PLAN.md  PRD.md  PRICING.md  TDD.md  agents.md
infra/: main.bicep  parameters.example.json
mock/: README.md  db.json  routes.json
openapi/: api-v1.yaml
scripts/: deploy-azure.sh  dev-with-data.sh  dev.sh  export_prod_sample_data.py  export_test_data.py  import_sample_data.py  import_test_data.py  migrate_files_incremental.py  migrate_files_only.py  migrate_files_parallel.py  migrate_from_supabase.py  setup-azure.sh  transform-data.js
seeds/: books.json  categories.json
tests/: conftest.py
(+145 files in other folders)
